fixed button alignment on 70% of buttons and added under contruction image

--- a/LP-style.css
+++ b/LP-style.css
@@ -98,10 +98,11 @@ blockquote{
     color: #313131;
     background-color: rgba(73, 73, 73, 0);
     margin-bottom: 150px;
+    display: flex;
 
 }
 #button1 {
-    margin-left: 20%;
+    /*margin-left: 20%;*/
 
 
 }
@@ -113,7 +114,8 @@ blockquote{
     color: whitesmoke;
     border-radius: 8px;
     width: 150px;
-    transition-duration: 0.4s
+    transition-duration: 0.4s;
+    text-align: center;
 
 }
 
@@ -144,6 +146,9 @@ blockquote{
     margin: 100px auto;
     width: 150px;
     text-align: center;
+    margin: 0 auto;
+
+    /*float: ;*/
 
     -webkit-transition: all .1s ease;
     -moz-transition: all .1s ease;
@@ -302,6 +307,9 @@ ul.cont{
     width: 600px;
     left: calc(50% - 335px);
     box-sizing: content-box;
+    text-align: center;
+    margin: 0 auto;
+    display: block;
 
 }
 /*h1{*/
@@ -314,5 +322,10 @@ ul.cont{
     /*text-align: center;*/
 
 /*}*/
+
+#construction {
+    display: block;
+    margin: 0 auto;
+}
 
 
